# mia

./: .gitignore  docker-compose.yml
agents/ai-ba/: EXAMPLE_.env  README.md  start.py
agents/ai-tech/: .gitignore  EXAMPLE_.env  README.md  reset_working_queue.sh  start.py
agents/ai-tools/: EXAMPLE_.env  package-lock.json  pyproject.toml
agents/ai-tools/registry/: catalog.json
agents/ai-tools/servers/pytest_runner/: server.py
agents/ai-tools/shared/: auth.py
agile-studio/: Dockerfile  EXAMPLE_.env  README.md  mcp-cursor.example.json  requirements-mcp.txt  requirements.txt
ai-ba/: .gitignore  EXAMPLE_.env  README.md  start.py
ai-dev/: EXAMPLE_.env  README.md  start.py
ai-devops/: EXAMPLE_.env  README.md  start.py
ai-pm/: EXAMPLE_.env  README.md  start.py
ai-qc/: .gitignore  EXAMPLE_.env  README.md  start.py
ai-tech/: EXAMPLE_.env  README.md  start.py
api-center/: AGILE_STUDIO_INTEGRATION.md  EXAMPLE_.env  README.md  agent_db.py  agent_management.py  agents.catalog.json  agents.json  api_center.py  requirements.txt
core/: .gitignore  Dockerfile  EXAMPLE_.env  LICENSE  README.md  docker-compose.yml  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json
second-brain/: .env.example  Dockerfile  README.md  requirements.txt
workflow-runtime/: .gitignore  EXAMPLE_.env  main.py  new_project.py  ops_center.py  requirements.txt  studio_agents_catalog.example.json  workflow_human_approval.py  workflow_queue_mode.py  workflow_studio.py  workflow_yaml.py  working_queue_webhook.py  working_queue_webhook_agents.example.json
(+528 files in other folders)
