[project]
name = "ai-tools"
version = "0.1.0"
description = "MCP broker layer for mia — registry, auth, and launchers for official MCP servers"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "mcp-atlassian>=0.21.0",
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "pytest-repeat>=0.9",
    "httpx>=0.28",
    "allure-pytest>=2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "registry", "launchers", "servers"]
